--- a/src/app/components/notifications/notifications.component.css
+++ b/src/app/components/notifications/notifications.component.css
@@ -14,11 +14,12 @@
     align-items: center;
     gap: 12px;
     color: white;
+    background-color:var(--primary-color);
     padding: 15px 20px;
     border-radius: 8px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
     font-weight: bold;
-    animation: fadeInOut 5s ease-in-out;
+    animation: fadeInOut 3s ease-in-out;
 }
 
 /* Icon için yuvarlak arka plan */
