Bildirim Güncelle eklendi ve bazı ufak düzenlemeler yapıldı. /#11

--- a/src/app/components/admin-notifications/admin-notifications.component.css
+++ b/src/app/components/admin-notifications/admin-notifications.component.css
@@ -123,6 +123,13 @@ input, textarea, select{
   color: white;
   font-weight: bold;
 }
+.admin-table-responsive {
+
+  overflow-y: auto;
+  padding: 20px;
+  background-color: var(--card-background-color);
+}
+
 
 .admin-table th,
 .admin-table td {
