--- a/src/app/components/admin-notifications/admin-notifications.component.css
+++ b/src/app/components/admin-notifications/admin-notifications.component.css
@@ -42,12 +42,6 @@ input, textarea, select{
   gap: 10px;
   
 }
-.color-picker {
-  display: flex;
-  gap: 10px;
-  margin-top: 10px;
-  height: 50px;
-}
 
 .icon-list {
   display: flex;
@@ -57,7 +51,7 @@ input, textarea, select{
 }
 
 .icon-list i {
-  font-size: 24px;
+  font-size: 36px;
   cursor: pointer;
   transition: transform 0.2s;
 }
@@ -81,7 +75,9 @@ input, textarea, select{
 .color-box {
   display: inline-block;
   width: 40px;
-  border-radius: 4px;
+  min-width: 40px;
+  max-width: 40px;
+  border-radius: 5px;
   display: flex;
   gap: 10px;
   align-items: center;
@@ -89,9 +85,39 @@ input, textarea, select{
   height: 40px; /* Kare köşeler için */
 }
 
+.color-icon {
+  position: absolute;
+  top: 63%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  pointer-events: none;
+}
+
+.position-relative {
+  display: inline-block;
+  width: 80px;
+  height: 40px;
+  position: relative;
+}
+
+.color-picker {
+  margin-top: 10px;
+  width: 80px;
+  height: 40px;
+  cursor: pointer;
+  padding: 0;
+  background: transparent;
+  border: none;
+  border-radius: 5px;
+  margin: 0 !important;
+  margin-top: 5px !important;
+
+}
+
+
 /* Durum için stil */
 .status-read {
-  color: green;
+  color: var(--secondary-text-color);
   font-weight: bold;
 }
 
