--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -23,10 +23,10 @@
         <!-- Giriş Yapılmamışsa Kayıt ve Giriş Butonları -->
         <ng-container *ngIf="!isLoggedIn">
           <li class="nav-item">
-            <a class="nav-link" routerLink="/register">Kayıt Ol</a>
+            <a class="nav-link" href="/register">Kayıt Ol</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/login">Giriş Yap</a>
+            <a class="nav-link" href="/login">Giriş Yap</a>
           </li>
         </ng-container>
 
