--- a/src/app/components/admin-user-management/admin-user-management.component.html
+++ b/src/app/components/admin-user-management/admin-user-management.component.html
@@ -75,7 +75,7 @@
             <thead>
                 <tr class="table-header">
                     <th><i class="fas fa-eye"></i> Profil</th>
-                    <th><i class="fas fa-id-badge"></i> ID</th>
+                    <th><i class="fa-solid fa-hashtag"></i> ID</th>
                     <th><i class="fas fa-user-circle"></i> Resim</th>
                     <th><i class="fas fa-user"></i> Ad</th>
                     <th><i class="fas fa-id-card"></i> TC Kimlik</th>
@@ -96,7 +96,7 @@
                         </button>
                     </a>
                     </td>
-                    <td>{{ user.id }}</td>
+                    <td><i class="fa-solid fa-hashtag"></i>{{ user.id }}</td>
                     <td>
                         <i *ngIf="!profileImage" class="fa-regular fa-circle-user profile-img-default"></i>
                     </td>
