--- a/src/app/components/admin-notifications/admin-notifications.component.html
+++ b/src/app/components/admin-notifications/admin-notifications.component.html
@@ -17,7 +17,7 @@
             <table class="admin-table" *ngIf="notifications != null">
                 <thead>
                     <tr>
-                        <th><i class="fas fa-id-badge"></i> ID</th>
+                        <th><i class="fa-solid fa-hashtag"></i> ID</th>
                         <th><i class="fas fa-icons"></i> İkon</th>
                         <th><i class="fas fa-heading"></i> Başlık</th>
                         <th><i class="fas fa-comment-alt"></i> Açıklama</th>
@@ -32,7 +32,7 @@
                 </thead>
                 <tbody>
                     <tr *ngFor="let notification of notifications">
-                        <td><b>#</b>{{ notification.id }}</td>
+                        <td><i class="fa-solid fa-hashtag"></i>{{ notification.id }}</td>
                         <td style="font-size: 20px; text-align: center;">
                             <!-- İkonu dinamik olarak göster -->
                             <i class="fa" [ngClass]="notification.icon"></i>
@@ -43,7 +43,7 @@
                             <!-- Rengi dinamik olarak göster -->
                             <span class="color-box" [style.background-color]="notification.renk"></span>
                         </td>
-                        <td>{{ notification.kullaniciId }}</td>
+                        <td><i class="fa-solid fa-hashtag"></i>{{ notification.kullaniciId }}</td>
                         <td>
                             <!-- Durumu true/false'a göre göster -->
                             <span
