--- a/src/app/components/settings/settings.component.html
+++ b/src/app/components/settings/settings.component.html
@@ -24,8 +24,8 @@
       <h1><i class="fa-solid fa-gear"></i> Ayarlar</h1>
       <p>Buradan profil fotoğrafınızı, e-posta adresinizi ve şifrenizi güncelleyebilirsiniz.</p>
       <ul class="list-group">
-        <li class="list-group-item">
-          <i class="fa-solid fa-id-card"></i> <strong> T.C. Kimlik:</strong> {{ userObj.nationalityId }}
+        <li class="list-group-item" (mouseenter)="userObj.showFullTc = true" (mouseleave)="userObj.showFullTc = false">
+          <i class="fa-solid fa-id-card"></i> <strong> T.C. Kimlik:</strong> {{ userObj.nationalityId | tcMask:userObj.showFullTc }}
         </li>
         <li class="list-group-item">
           <i class="fa-solid fa-user"></i> <strong> İsim Soyisim:</strong> {{ userObj.firstName }} {{
