--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -4,20 +4,22 @@
     <div class="mt-4">
         <ul class="nav nav-tabs" id="applicationTabs" role="tablist">
             <li class="nav-item" role="presentation">
-                <button class="nav-link active" id="active-tab" data-bs-toggle="tab" data-bs-target="#active"
-                    type="button" role="tab" (click)="status = 'active'">Aktif İlanlar</button>
+                <button class="nav-link" [class.active]="status === 'active'" id="active-tab" type="button" role="tab"
+                    (click)="status = 'active'">Aktif İlanlar</button>
             </li>
             <li class="nav-item" role="presentation">
-                <button class="nav-link" id="past-tab" data-bs-toggle="tab" data-bs-target="#past" type="button"
-                    role="tab" (click)="status = 'past'">Geçmiş İlanlar</button>
+                <button class="nav-link" [class.active]="status === 'past'" id="past-tab" type="button" role="tab"
+                    (click)="status = 'past'">Geçmiş İlanlar</button>
             </li>
         </ul>
         <div class="tab-content mt-3">
-            <div class="tab-pane fade show active" id="active" role="tabpanel">
+            <div class="tab-pane fade show active">
                 <utk-cards [status]="status"></utk-cards>
-            </div>
-            <div class="tab-pane fade" id="past" role="tabpanel">
-                <utk-cards [status]="status"></utk-cards>
+                <button class="btn btn-primary mt-3 w-100">
+                    <a class="nav-link" [routerLink]="status === 'active' ? '/ilanlar/aktif' : '/ilanlar/gecmis'">
+                        Tüm {{ status === 'active' ? 'Aktif' : 'Geçmiş' }} İlanlar
+                    </a>
+                </button>
             </div>
         </div>
     </div>
